--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>antafes</groupId>
-    <artifactId>Utilities</artifactId>
+    <artifactId>utilities</artifactId>
     <version>2.1.3</version>
 
     <distributionManagement>
