--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,14 @@
 
     <groupId>antafes</groupId>
     <artifactId>utilities</artifactId>
-    <version>2.1.3</version>
+    <version>2.1.4</version>
+    <packaging>jar</packaging>
 
     <distributionManagement>
         <repository>
             <id>github-utilities</id>
             <name>GitHub Antafes Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/Antafes/Utilities</url>
+            <url>https://maven.pkg.github.com/antafes/utilities</url>
         </repository>
     </distributionManagement>
 
